[package]
name = "egui-widget-pump"
version = "0.1.0"
authors = ["Rob Ward <rob@resona.nz>"]
edition = "2021"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.82"
repository = "https://github.com/resonanz/egui-widget-pump"
keywords = ["eframe", "egui", "ui", "widgets"]
description = "An egui pump widget."
license = "MIT"
documentation = "https://docs.rs/egui-widget-pump"

[dependencies]
egui = "0.29.1"
