[package]
name = "egui-widget-pump"
version = "0.1.0"
authors = ["Rob Ward <rob@resona.nz>"]
edition = "2021"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.84"
repository = "https://github.com/resonanz/egui-widget-pump"
keywords = ["eframe", "egui", "ui", "widgets"]
description = "An egui pump widget."
license = "MIT"
documentation = "https://docs.rs/egui-widget-pump"

[dependencies]
egui = "0.31.0"
egui_extras = { version = "0.31.0", features = ["default", "all_loaders"] }
